--- a/calculator.html
+++ b/calculator.html
@@ -3,15 +3,16 @@
     <head>
         <title>Calculator</title><meta charset="utf-8">
         <script type="text/javascript">
-            function cube() {
+            function power(exponent) {
                 var num = document.getElementById("n1");
-                num.value = Math.pow(num.value, 3);
+                num.value = Math.pow(num.value, exponent);
             }
         </script>
     </head>
     <body>
         <h1>Calculadora de Francisco Martínez Belmonte</h1>
         <p>Number: <input type="text" id="n1"></p>
-        <button onclick="cube()"> x^3 </button>
+        <button onclick="power(3)"> x^3 </button>
+        <button onclick="power(4)"> x^4 </button>
     </body>
 </html>
